# DibsComputingCore

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dibs_computing_core/iso_simulator/building_simulator/: simulator.py
src/dibs_computing_core/iso_simulator/data_source/: datasource.py
src/dibs_computing_core/iso_simulator/dibs/: dibs.py
src/dibs_computing_core/iso_simulator/dibs/dibs_utils/: dibs_auxiliary_functions.py
src/dibs_computing_core/iso_simulator/model/: ResultOutput.py  building.py  hours_result.py  summary_result.py
